--- a/static/styles.css
+++ b/static/styles.css
@@ -1,14 +1,19 @@
-/* * {
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-} */
+}
+
+body {
+    background-color: #eceae7;
+}
 
 div.container {
     height: 95vh;
     width: 90vw;
     border: 1px solid #eee;
     margin: 10px;
+    background-color: #FFF;
 }
 
 header nav 
