--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" href="/static/favicon-shih-tzu.png">
         <link rel="stylesheet" href="/static/styles.css">
         {% block title %}
             <title>Joy's Profile</title>
