--- a/static/styles.css
+++ b/static/styles.css
@@ -7,8 +7,9 @@
     text-decoration: none;
 }
 
-body {
+html body {
     background-color: #eceae7;
+    line-height: 1.0;
 }
 
 div.container {
@@ -20,10 +21,10 @@ div.container {
     box-shadow: 0px 2px 6px 2px rgba(0, 0, 0, 0.4);
     position: relative;
     z-index: 2;
+    padding: 0;
 }
 
-header nav 
-{
+header nav {
     display: flex;
     justify-content: space-evenly;
     position: relative;
@@ -37,11 +38,13 @@ header nav a {
     padding: 10px;
     text-shadow: 0.5px 0.5px 4px #000;
     margin-top: 8px;
+    text-decoration: none;
 }
 
 header nav a:hover {
     background-color: rgba(255, 166, 0, 0.9);
     border-radius: 4px;
+    color: #FFF;
     box-shadow: 0px 2px 6px 2px rgba(0, 0, 0, 0.4);
 }
 
@@ -158,9 +161,13 @@ div.content-box {
     width: 100%;
 }
 
-.internal-box form input {
+.internal-box form input,
+.pages-main .content-box form input {  
     padding: 8px;
     display: block;
+    border-radius: 8px;
+    border: 1px solid  #eceae7;
+    box-shadow: 1px 2px 2px 1px rgba(0, 0, 0, 0.4);
 }
 
 .internal-box form input[type="email"] {
@@ -168,6 +175,56 @@ div.content-box {
     margin-bottom: 8px;
 }
 
+.internal-box form input[type="submit"] {
+    cursor: pointer;
+}
+
+.upload-box form {
+    display: flex;
+}
+
+.upload-box form input {
+    margin: 0 8px;
+}
+
 .internal-box #result {
     text-align: center;
+}
+
+/* CAROUSEL */
+div.container #myCarousel {
+    width: 95%;
+    margin: 0 auto 16px;
+    box-shadow: 0px 2px 6px 2px rgba(0, 0, 0, 0.4);
+    border-radius: 8px;
+}
+
+div.container #myCarousel .carousel-inner {
+    border-radius: 8px;
+}
+  
+.carousel {
+    margin-bottom: 1.5rem;
+    z-index: 2;
+}
+/* Since positioning the image, we need to help out the caption */
+.carousel-caption {
+    bottom: 3rem;
+    z-index: 10;
+    text-shadow: 1px 1px 0.5px #000;
+    margin-bottom: 14px;
+    font-size: 1.25em;
+}
+
+/* Declare heights because of positioning of img element */
+.carousel-item {
+    height: 32rem;
+}
+.carousel-item > img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-width: 100%;
+    height: 32rem;
+    object-fit: cover;
 }
