--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -1,47 +1,67 @@
 {% extends 'layout.html' %}
 
 {% block title %}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+    
     <title>Joy's pics</title>
 {% endblock %}
 
 {% block mainContent %}
     <div class="home-background"></div>
-    
-    <main class="pages-main">
-        <div class="content-box">
-           <h1>
-                Some pics of me!!
-            </h1>
 
-            <h1>Upload new image</h1>
+    <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+        <ol class="carousel-indicators">
+            {% for file in files %}
+                {% if loop.index0 == 0 %}
+                    <li data-bs-target="#myCarousel" data-bs-slide-to="{{ loop.index0 }}" class="active"></li>
+                    {% else %}
+                    <li data-bs-target="#myCarousel" data-bs-slide-to="{{ loop.index0 }}"></li>
+                {% endif %}
+            {% endfor %}
+        </ol>
+
+        <div class="carousel-inner">
+            {% for file in files %}
+                {% if loop.index0 == 0 %}
+                    <div class="carousel-item active">
+                        <img src="{{ file.image }}" class="d-block w-100" alt="{{ file.image }}">
+                        <div class="carousel-caption d-none d-md-block">
+                            <p>{{ file.title }}</p>
+                        </div>
+                    </div>
+                    {% else %}
+                    <div class="carousel-item">
+                        <img src="{{ file.image }}" class="d-block w-100" alt="{{ file.image }}">
+                        <div class="carousel-caption d-none d-md-block">
+                            <p>{{ file.title }}</p>
+                        </div>
+                    </div>
+                {% endif %}
+            {% endfor %}
+        </div>
+
+        <a class="carousel-control-prev" href="#myCarousel" role="button" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </a>
+
+        <a class="carousel-control-next" href="#myCarousel" role="button" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </a>
+    </div>
+
+    <main class="pages-main">
+        <div class="content-box upload-box">
+            <h3>Do you have any photos with me? Please send me!</h3>
             <form method="post" enctype="multipart/form-data">
                 <input type="file" id="file" name="file" accept="image/png, image/jpeg, image/jpg" required>
                 <input type="text" name="title" placeholder="Title" required>
                 <input type="submit" value="Upload">
-            </form>   
-
-            {% for file in files %}
-                <img class="photo" width="800px" src="{{ file.image }}" alt="{{ file.title }}"/>
-            {% endfor %}      
+            </form>
         </div>
     </main>
 
-    <script>
-        // prevents user upload any file except .jpeg/.jpg/.png
-        const file = document.getElementById('file')
-
-        file.onchange = function(e) {
-            const ext = this.value.match(/\.([^\.]+)$/)[1]
-
-            switch (ext) {
-                case 'jpg':
-                case 'jpeg':
-                case 'png':
-                break
-                default:
-                alert('File extension not allowed!')
-                this.value = ''
-            }
-        }
-    </script>
+    <script src="../static/scripts.js"></script>
 {% endblock %}
